Fixed gallery alignment

--- a/Index.css
+++ b/Index.css
@@ -74,6 +74,7 @@ a:hover {
     margin-left: calc(100%  /6);
     background-color: white;
     opacity: 0.70;
+    margin: 100px;
 }
 
 .collapsible {
@@ -111,6 +112,7 @@ a:hover {
     font-size: 1em;
     text-align: center;
     width: 100%;
+    padding-bottom: 100px;
 }
 
 .FooterLogo {
